	  Windows MIDI driver also supports running status for short messages now. OSS MIDI and CoreMIDI drivers also improved by this.
	* AudioFileWriter now always produces .WAV files in little endian and .RAW files in big endian which corresponds to smf2wav behaviour.
	* Audio drivers for CoreAudio, ALSA and PulseAudio made compatible with big endian systems.

2014-06-09:

	1.2.0 released.

	* Updated mt32emu library to version 1.4.0.
	* Added support for reverb model compatibility settings.
	* Fixed a few minor bugs related to reverb and output gains.
	* Added two convenience buttons in synth properties dialog to allow resetting MIDI channel assignment easily.
	* Improved build:
	  - added build option mt32emu-qt_WITH_ALSA_MIDI_DRIVER to control
	    whether to use ALSA MIDI driver (if enabled, ALSA MIDI sequencer
	    ABI is used to communicate with other applications, otherwise,
	    ALSA/OSS4 raw MIDI ports and OSS sequencer ABI are available);
	  - OSS MIDI driver no longer compiles if it isn't needed.
	* Fixed a bug in Windows MME audio driver introduced in version 1.1.0:
	  resetting the synth no longer cause stopping generation of audio output.
	* When ALSA MIDI driver is used, ALSA MIDI port being listened is now displayed in the main window title.
	* Fixed inconsistent ALSA MIDI port advertisement. ALSA MIDI driver now advertises the port
	  as SND_SEQ_PORT_TYPE_MIDI_GENERIC, SND_SEQ_PORT_TYPE_MIDI_MT32 and SND_SEQ_PORT_TYPE_MIDI_SYNTHESIZER.
	* When loading PulseAudio library dynamically, a library name with the major version number appended is tried first.
	  This allows PulseAudio to be loaded without installing the corresponding dev package, which only contains a versionless link
	  to the library shared object in major Linux/GNU distributions.

2013-09-21:

	1.1.0 released.

	* Updated for compatibility with new library v.1.3.0 API. Reworked rendering engine to make use of library internal MIDI event queue.