@@ -47,6 +47,7 @@ private slots:
 	void on_reverseStereoCheckBox_stateChanged(int state);
 	void on_assignChannels2_10Button_clicked();
 	void on_assignChannels1_8_10Button_clicked();
+	void on_engageChannel1CheckBox_stateChanged(int state);
 	void updateReverbSettings();
 	void handleReverbModeChanged(int mode);
 	void handleReverbTimeChanged(int time);
